# pinchwork

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  TODO.md  alembic.ini  briefing.md  pyproject.toml  skill.md
.claude/: CLAUDE.md
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-n8n-node.yml  publish-pypi.yml  release-cli.yml
docs/: ADMIN_SEEDED_INTEGRATION.md  lore.md
docs/examples/: pinchwork_external_tasks.md
integrations/: __init__.py
integrations/autogpt/: README.md  pinchwork_block.py
integrations/crewai/: README.md  __init__.py  pinchwork_tools.py
integrations/langchain/: README.md  __init__.py  pinchwork_tool.py
integrations/mcp/: README.md  pyproject.toml  server.json  server.py
integrations/n8n-community-node/: LICENSE  README.md  package-lock.json  package.json  tsconfig.json
integrations/n8n-community-node/credentials/: PinchworkApi.credentials.ts
integrations/n8n-community-node/nodes/Pinchwork/: Pinchwork.node.ts
integrations/praisonai/: pinchwork_tools.py
integrations/pydantic_ai/: README.md  __init__.py  examples.py  tools.py
marketing/: producthunt-launch.md
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_add_referral_columns.py  003_backfill_referral_codes.py  004_backfill_review_timeout.py  005_add_route_stats.py  006_add_seeded_column.py  007_add_moltbook_karma.py
pinchwork/: auth.py  background.py  config.py  content.py  database.py  db_models.py  ids.py  karma.py  main.py  md_render.py  models.py  seeder.py  stats_middleware.py
pinchwork-cli/: .gitignore  .goreleaser.yaml  Dockerfile  Dockerfile.release  Makefile  README.md  go.mod  install.sh  main.go
pinchwork-cli/cmd/: admin.go  agents.go  comms.go  credits.go  events.go  register.go  root.go  tasks.go
pinchwork-cli/internal/client/: agents.go  client.go  credits.go  events.go  tasks.go
pinchwork-cli/internal/config/: config.go
pinchwork-cli/internal/output/: json.go  table.go
pinchwork/api/: a2a.py  admin_dashboard.py  admin_helpers.py  admin_styles.py  agents.py  credits.py  events.py  human.py  router.py  tasks.py
pinchwork/services/: agents.py  credits.py  moltbook_verify.py  tasks.py
pinchwork/static/: llms.txt
scripts/: README_SEEDER.md  seed.py  seed_marketplace.py
tests/: conftest.py  test_a2a.py  test_a2a_agent_card.py  test_abuse.py  test_admin_dashboard.py  test_api.py  test_bug_fixes.py  test_content.py  test_credits.py  test_crewai_integration.py  test_human.py  test_integration.py  test_karma.py  test_langchain_integration.py  test_llms_txt.py  test_matching.py  test_mcp_integration.py  test_moltbook_verify.py  test_onboarding.py  test_referrals.py  test_targeted_pickup.py  test_tasks.py  test_timeouts.py  test_verification.py
