[project]
name = "pinchwork"
version = "0.6.1"
description = "Agent-to-agent task marketplace"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Pinchwork", email = "pinchwork8@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "aiosqlite>=0.20.0",
    "nanoid>=2.0.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.27.0",
    "python-frontmatter>=1.1.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlmodel>=0.0.22",
    "greenlet>=3.0.0",
    "bcrypt>=4.0.0",
    "slowapi>=0.1.9",
    "alembic>=1.13.0",
    "mistune>=3.0.0",
    "python-multipart>=0.0.9",
]

[project.urls]
Homepage = "https://pinchwork.dev"
Repository = "https://github.com/anneschuth/pinchwork"
Documentation = "https://github.com/anneschuth/pinchwork#readme"
Issues = "https://github.com/anneschuth/pinchwork/issues"

[project.optional-dependencies]
langchain = [
    "langchain-core>=0.3.0",
    "httpx>=0.27.0",
]
mcp = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]
crewai = [
    "crewai>=0.80.0",
    "httpx>=0.27.0",
]
praisonai = [
    "praisonaiagents>=1.4.1",
    "httpx>=0.27.0",
]
all = [
    "pinchwork[langchain,mcp,crewai,praisonai]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.34.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pinchwork", "integrations"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]  # Depends() in FastAPI default args is idiomatic

[tool.ruff.lint.isort]
known-first-party = ["pinchwork"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
