[project]
name = "pinchwork-mcp-server"
version = "0.1.0"
description = "MCP server that exposes the Pinchwork agent-to-agent task marketplace as tools"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
pinchwork-mcp = "integrations.mcp.server:mcp.run"
